<resources>
	<string name="app_name">ConsultaPronta</string>
	<string name="go_back">Voltar</string>
	<string name="create_account">Criar Conta</string>
	<string name="input_your_data">Preencha seus dados para começar</string>
	<string name="input_name">Nome</string>
	<string name="input_cpf">CPF</string>
	<string name="input_email">Email</string>
	<string name="input_phone_number">Número de telefone</string>
	<string name="input_password">Senha</string>
	<string name="input_password_confirm">Confirmar senha</string>
	<string name="terms_part1">Li e aceito</string>
	<string name="terms_of_use">Termos de Uso</string>
	<string name="terms_part2">e a</string>
	<string name="privacy_policy">Política de Privacidade</string>
	<string name="has_account">Já possui conta?</string>
	<string name="sign_in">Fazer login</string>
	<string name="patient_select_option">Sou Paciente</string>
	<string name="professional_select_option">Sou Profissional</string>
	<string name="send_crm">Enviar CRM ou E-CRM</string>
	<string name="enter_with_govbr">Entrar com</string>
	<string name="forgot_password">Esqueceu a senha?</string>
	<string name="enter">Entrar</string>
	<string name="do_not_have_account">Não possui conta?</string>
	<string name="sign_up">Criar conta</string>
	<string name="placeholder">Lorem Ipsum</string>
	<string name="very_long_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
	<string name="placeholder_date">1 de jan. de 1970</string>
	<string name="placeholder_number">10</string>
	<string name="home">Home</string>
	<string name="more">Mais</string>
	<string name="navbar_second_element_patient_text">Histórico</string>
	<string name="navbar_fourth_element_patient_text">Hospitais</string>
	<string name="navbar_second_element_professional_text">Pacientes</string>
	<string name="navbar_fourth_element_professional_text">Farmácia</string>
	<string name="screentitle_symptom_history">Histórico do Sintoma</string>
	<string name="password_length_error">A senha deve ter 8 ou mais caracteres</string>
	<string name="password_caps_error">A senha deve conter letras maiúsculas e minúsculas</string>
	<string name="password_numbers_error">A senha deve conter um número</string>
	<string name="intensity">Intensidade:\ </string>
	<string name="edited">EDITADO</string>
	<string name="edit">Editar</string>
	<string name="error_blank_input">Um ou mais campos estão vazios</string>
	<string name="error_password_not_the_same">As senhas não se coincidem</string>
	<string name="error_password_not_valid">A senha não é válida</string>
	<string name="filter">Filtrar</string>
	<string name="all_filter">Todos</string>
	<string name="order_by">Ordenar</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="quick_text">Acesso Rápido</string>
	<string name="recent_symptoms">Sintomas Recentes</string>
	<string name="see_all">Ver Todos</string>
	<string name="my_exams_text">Meus Exames</string>
	<string name="reports_text">Relatórios</string>
	<string name="my_medicines_text">Meus Medicamentos</string>
	<string name="appointments_text">Consultas</string>
	<string name="search_hint">Pesquisar sintoma</string>
	<string name="symptom_history_title">Histórico do sintoma</string>
	<string name="hospital_search_hint">Buscar hospitais</string>
	<string name="map_view">Visualizar mapa</string>
	<string name="hospital_open">Aberto 24h</string>
	<string name="hospital_img_placeholder">Hospital_img_placeholder</string>
	<string name="distance_placeholder">Distance</string>
	<string name="occupancy_placeholder">30% lotado</string>
	<string name="view_profile">Visualizar Perfil</string>
	<string name="edit_profile">Editar Perfil</string>
	<string name="settings">Configurações</string>
	<string name="help_and_support">Ajuda &amp; Suporte</string>
	<string name="about_us">Sobre nós</string>
	<string name="clean_cache">Limpar cache</string>
	<string name="delete_account">Excluir dados e deletar conta</string>
	<string name="exit_account">Sair da conta</string>
	<string name="exit_account_subtitle">Tem certeza que deseja sair sua conta?</string>
	<string name="exit_account_description">Seus dados continuarão salvos, mas será necessário logar novamente para acessa-los</string>
	<string name="succesfully_cache_deleted">Cache apagado com sucesso!</string>
	<string name="auth_login_title">Bem-Vindo</string>
	<string name="auth_login_subtitle">Faça o login para acessar seus dados.</string>
	<string name="send_crm_subtitle">Envie seu CRM/E-CRM para comprovarmos sua identidade</string>
	<string name="send_crm_text_main">Tirar foto ou enviar documento</string>
	<string name="send_crm_text_file_type">(Arquivo deve ser .jpg .jpeg .png .pdf)</string>
	<string name="reports_search_hint">Buscar relatórios</string>
	<string name="add_report">Adicionar relatório</string>
	<string name="export_list">Exportar lista</string>
	<string name="report_card_title_prefix">Relatório:\ </string>
	<string name="report_card_period">Período:\ </string>
	<string name="report_card_period_placeholder">%1$d dias</string>
	<string name="report_card_add_date">Adicionado em\ </string>
	<string name="reports_screen_title">Relatórios</string>
	<string name="gen_reports_screen_subtitle">Gere um relatório completo de seus sintomas para compartilhar com seu médico</string>
	<string name="reports_title_input_hint">Título do relatório</string>
	<string name="period">Período</string>
	<string name="gen_reports_period_from">De:</string>
	<string name="gen_reports_period_to">Até:</string>
	<string name="today">Hoje</string>
	<string name="select...">Selecionar…</string>
	<string name="select_professionals_authorized">Profissionais que podem visualizar</string>
	<string name="view_symptoms_included">Visualizar sintomas incluídos</string>
	<string name="symptoms_included">Sintomas incluídos</string>
	<string name="period_resume">Resumo do período</string>
	<string name="registers">Registros</string>
	<string name="most_affected_area">Área mais afetada</string>
	<string name="not_available">N/A</string>
	<string name="create_download_report">Criar e baixar relatório em PDF</string>
	<string name="gen_reports_screen_title">Gerar relatório</string>
	<string name="average_intensity">Intensidade média</string>
	<string name="report_id">Relatório ID: %1$s</string>
	<string name="view_report_duration">Duração: %1$d dias\ </string>
	<string name="view_report_period">Periodo: %1$s a %2$s\ </string>
	<string name="geral_summary">Resumo Geral</string>
	<string name="most_commom_symptom">Sintoma mais comum:</string>
	<string name="chronology_symptoms">Cronologia dos sintomas</string>
	<string name="report_card_added_in">Adicionado em\ </string>
	<string name="date_picker_title">Selecione a data</string>
	<string name="time_picker_title">Selecione o horário</string>
	<string name="DATE_FORMAT">dd/MM/yyyy</string>
	<string name="create_report">Criar relatório</string>
	<string name="cancel">Cancelar</string>
	<string name="bottom_sheet_view_permission_title">Permissões de visualização</string>
	<string name="save">Salvar</string>
	<string name="auth_create_account_contact_forms_subtitle">Seleciona suas formas de contato (no mínimo uma)</string>
	<string name="sms_contact_form">SMS</string>
	<string name="whatsapp_contact_form">WhatsApp</string>
	<string name="telegram_contact_form">Telegram</string>
	<string name="type_contact_form">Digite a forma de contato</string>
	<string name="register_contact_form">Registrar forma de contato</string>
	<string name="auth_create_account_contact_forms_verification_subtitle">Iremos enviar um código para cada forma de contato selecionado</string>
	<string name="type_code_send">Digite o código enviado por\ </string>
	<string name="verify_code">Verificar código</string>
	<string name="verify">Verificar</string>
	<string name="code_delay_advice">Você pode levar alguns instantes para receber o código.</string>
	<string name="click_to_resend">Clique aqui para enviar outro código</string>
	<string name="medications_screen_title">Meus medicamentos</string>
	<string name="search_medications_hint">Buscar medicamentos</string>
	<string name="medications_check_advice">Marque diariamente a caixa após o uso de medicamento.</string>
	<string name="medications_title">Medicamentos</string>
	<string name="register_medications_screen_title">Adicionar medicamento</string>
	<string name="medication_name">Nome do medicamento</string>
	<string name="medication_name_hint">Escreva o nome do medicamento</string>
	<string name="type_consumption">Tipo de consumo</string>
	<string name="type_consumption_hint">Selecione o consumo</string>
	<string name="usage_time">De quantas em quantas horas</string>
	<string name="time_not_selected">--:--</string>
	<string name="photo">Foto</string>
	<string name="photo_or_annex">Tirar foto ou anexar imagem</string>
	<string name="register_medication">Registrar medicamento</string>
	<string name="title_register_page">Registrar Sintoma</string>
	<string name="title_edit_page">Editar Sintoma</string>
	<string name="title_exam_page">Meus Exames</string>
	<string name="question_symptom">O que você está sentindo?</string>
	<string name="question_symptom_area">Resuma seus sintomas</string>
	<string name="detail_symptom_area">Descreva seus sintomas com detalhes</string>
	<string name="symptom_event">Quando começou?</string>
	<string name="which_body_part">Em qual local do corpo?</string>
	<string name="hour_hint">--:--</string>
	<string name="hour_title">Hora</string>
	<string name="date_hint">dd/mm/yyyy</string>
	<string name="date_title">Data</string>
	<string name="symptom_intensity">Qual a intensidade do sintoma?\nIntensidade atual: %1$d</string>
	<string name="img_instructions">Tirar foto ou anexar imagem</string>
	<string name="symptom_register">Registrar Sintoma</string>
	<string name="picture">Foto</string>
	<string name="strong">Forte (10)</string>
	<string name="moderated">Moderada (5)</string>
	<string name="light">Leve (1)</string>
	<string name="select_place">Selecione o local</string>
	<string name="medication_dose_unit_title">Dose</string>
	<string name="medication_dose_unit_subtitle">Ex.: 500 mg, 1 tablete</string>
	<string name="medication_dose_unit_hint">Escreva a dose</string>
	<string name="unit">unidade</string>
	<string name="medication_frequency_unit_title">Frequência</string>
	<string name="medication_frequency_unit_subtitle">Ex.: A cada 4 horas, a cada 2 dias</string>
	<string name="medication_frequency_unit_hint">Escreva a frequencia</string>
	<string name="medication_duration_title">Duração</string>
	<string name="medication_duration_hint">Escreva a duração em dias</string>
	<string name="medication_extra_instructions_title">Instruções extras</string>
	<string name="medication_extra_instructions_hint">Escreva instruções extras da dosagem</string>
	<string name="medication_notes_title">Anotações</string>
	<string name="medication_notes_hint">Outras informações (opcional)</string>
	<string name="days">dias</string>
	<string name="question_what_professional_consultation">Deseja solicitar consulta para que profissional?</string>
	<string name="select_professional">Selecione o profissional</string>
	<string name="question_consultation_motivation">Selecione a motivação da consulta</string>
	<string name="select_motivation">Selecione a motivação</string>
	<string name="give_more_details">Dê mais detalhes</string>
	<string name="give_more_symptom_details_hint">Descreva seus sintomas com detalhes</string>
	<string name="question_consultation_datetime">Quando deseja realizar a consulta?</string>
	<string name="question_what_hospital">Em qual hospital?</string>
	<string name="select_hospital">Selecione o hospital</string>
	<string name="request_consultation">Solicitar consulta</string>
</resources>