<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"

	android:layout_width="match_parent"
	android:layout_height="match_parent"

	tools:context=".AdicionarMedicamento"
	tools:layout_marginHorizontal="@dimen/default_screen_padding">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:showDividers="middle"
		android:divider="@drawable/divider_default"
		android:paddingBottom="30dp" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/medication_name"
			android:textSize="20sp" />

		<EditText
			android:id="@+id/medication_name_input"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/shape_input"
			android:backgroundTint="@color/surface"
			android:hint="@string/medication_name_hint"
			android:inputType="text"
			android:autofillHints="name"
			android:textColor="@color/textDark"
			android:textColorHint="@color/textDark60" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/type_consumption"
			android:textSize="20sp" />

		<com.google.android.material.textfield.TextInputLayout
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

			android:id="@+id/type_consumption_dropdown"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColorHint="@color/textDark"

			app:hintEnabled="false"
			app:boxCornerRadiusTopStart="12dp"
			app:boxCornerRadiusTopEnd="12dp"
			app:boxCornerRadiusBottomStart="12dp"
			app:boxCornerRadiusBottomEnd="12dp"
			app:boxBackgroundColor="@color/surface"
			app:counterTextColor="@color/textDark"
			app:counterOverflowTextColor="@color/textDark"
			app:endIconMode="custom"
			app:endIconDrawable="@drawable/ic_arrow_down"
			app:endIconTint="@color/primaryDark">

			<com.google.android.material.textfield.MaterialAutoCompleteTextView
				android:id="@+id/medication_route_select"

				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:hint="@string/type_consumption_hint"
				android:textColorHint="@color/textDark60"
				android:inputType="textAutoComplete"
				android:textColor="@color/textDark"
				android:padding="@dimen/default_card_padding" />

		</com.google.android.material.textfield.TextInputLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/medication_dose_unit_title"
				android:textSize="20sp"
				android:layout_weight="1" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/medication_dose_unit_subtitle"
				android:textSize="14sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:showDividers="middle"
			android:divider="@drawable/divider_list">

			<EditText
				android:id="@+id/medication_dose_value"

				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@drawable/shape_input"
				android:backgroundTint="@color/surface"
				android:hint="@string/medication_dose_unit_hint"
				android:inputType="numberSigned"
				android:textColor="@color/textDark"
				android:textColorHint="@color/textDark60"/>


			<com.google.android.material.textfield.TextInputLayout
				style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

				android:id="@+id/medication_dose_select"

				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textColorHint="@color/textDark"
				android:layout_weight="1"

				app:hintEnabled="false"
				app:boxCornerRadiusTopStart="12dp"
				app:boxCornerRadiusTopEnd="12dp"
				app:boxCornerRadiusBottomStart="12dp"
				app:boxCornerRadiusBottomEnd="12dp"
				app:boxBackgroundColor="@color/surface"
				app:counterTextColor="@color/textDark"
				app:counterOverflowTextColor="@color/textDark"
				app:endIconMode="custom"
				app:endIconDrawable="@drawable/ic_arrow_down"
				app:endIconTint="@color/primaryDark">

				<com.google.android.material.textfield.MaterialAutoCompleteTextView
					android:id="@+id/medication_dose_unit"

					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:hint="@string/unit"
					android:textColorHint="@color/textDark60"
					android:inputType="none"
					android:textColor="@color/textDark"
					android:padding="@dimen/default_card_padding" />

			</com.google.android.material.textfield.TextInputLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/medication_frequency_unit_title"
				android:textSize="20sp"
				android:layout_weight="1" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/medication_frequency_unit_subtitle"
				android:textSize="14sp" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:showDividers="middle"
			android:divider="@drawable/divider_list">

			<EditText
				android:id="@+id/medication_frequency_value"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:background="@drawable/shape_input"
				android:layout_weight="1"
				android:backgroundTint="@color/surface"
				android:hint="@string/medication_frequency_unit_hint"
				android:inputType="numberSigned"
				android:textColor="@color/textDark"
				android:textColorHint="@color/textDark60"/>


			<com.google.android.material.textfield.TextInputLayout
				style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

				android:id="@+id/medication_frequency_select"

				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textColorHint="@color/textDark"
				android:layout_weight="1"

				app:boxBackgroundColor="@color/surface"
				app:boxCornerRadiusBottomEnd="12dp"
				app:boxCornerRadiusBottomStart="12dp"
				app:boxCornerRadiusTopEnd="12dp"
				app:boxCornerRadiusTopStart="12dp"
				app:counterOverflowTextColor="@color/textDark"
				app:counterTextColor="@color/textDark"
				app:endIconDrawable="@drawable/ic_arrow_down"
				app:endIconMode="custom"
				app:endIconTint="@color/primaryDark"
				app:hintEnabled="false">

				<com.google.android.material.textfield.MaterialAutoCompleteTextView
					android:id="@+id/medication_frequency_unit"

					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:hint="@string/unit"
					android:inputType="none"
					android:padding="@dimen/default_card_padding"
					android:textColor="@color/textDark"
					android:textColorHint="@color/textDark60" />

			</com.google.android.material.textfield.TextInputLayout>

		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/medication_duration_title"
			android:textSize="20sp" />



		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<EditText
				android:id="@+id/medication_duration"

				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:background="@drawable/shape_input"
				android:backgroundTint="@color/surface"
				android:hint="@string/medication_duration_hint"
				android:inputType="numberSigned"
				android:textColor="@color/textDark"
				android:textColorHint="@color/textDark60"
				android:layout_marginEnd="@dimen/default_inner_elements_spacing"

				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toStartOf="@id/days_text"/>

			<TextView
				android:id="@+id/days_text"

				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/days"
				android:textSize="20sp"

				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"/>
		</androidx.constraintlayout.widget.ConstraintLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/medication_extra_instructions_title"
			android:textSize="20sp" />

		<EditText
			android:id="@+id/medication_custom_instructions"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/shape_input"
			android:backgroundTint="@color/surface"
			android:hint="@string/medication_extra_instructions_hint"
			android:gravity="top"
			android:inputType="textMultiLine"
			android:maxLines="5"
			android:textColor="@color/textDark"
			android:textColorHint="@color/textDark60" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/medication_notes_title"
			android:textSize="20sp" />

		<EditText
			android:id="@+id/medication_notes"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/shape_input"
			android:backgroundTint="@color/surface"
			android:hint="@string/medication_notes_hint"
			android:gravity="top"
			android:inputType="textMultiLine"
			android:lines="3"
			android:maxLines="5"
			android:textColor="@color/textDark"
			android:textColorHint="@color/textDark60" />

		<Button
			android:id="@+id/register_medication_button"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/register_medication"
			android:textColor="@color/primaryDark"
			android:insetBottom="0dp"

			app:backgroundTint="@color/accent"
			app:cornerRadius="@dimen/big_button_corner_radius" />
	</LinearLayout>

</ScrollView>