<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"

	android:layout_width="match_parent"
	android:layout_height="match_parent"

	tools:context=".SolicitarConsulta">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:orientation="vertical"
		android:showDividers="middle"
		android:divider="@drawable/divider_default">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/question_what_professional_consultation"
			android:textSize="18sp"

			app:drawableStartCompat="@drawable/ic_asterisk"
			app:drawableTint="@color/error" />

		<Button
			android:id="@+id/professional_select"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/select_professional"
			android:textAlignment="viewStart"
			android:textColor="@color/textDark60"
			android:padding="@dimen/default_card_padding"
			android:insetTop="0dp"
			android:insetBottom="0dp"

			app:icon="@drawable/ic_arrow_down"
			app:iconSize="30dp"
			app:iconGravity="end"
			app:iconTint="@color/primaryDark"
			app:backgroundTint="@color/surface"
			app:cornerRadius="@dimen/big_button_corner_radius"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/question_consultation_motivation"
			android:textSize="18sp"

			app:drawableStartCompat="@drawable/ic_asterisk"
			app:drawableTint="@color/error" />

		<com.google.android.material.textfield.TextInputLayout
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

			android:id="@+id/type_consumption_dropdown"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColorHint="@color/textDark"

			app:hintEnabled="false"
			app:boxCornerRadiusTopStart="12dp"
			app:boxCornerRadiusTopEnd="12dp"
			app:boxCornerRadiusBottomStart="12dp"
			app:boxCornerRadiusBottomEnd="12dp"
			app:boxBackgroundColor="@color/surface"
			app:counterTextColor="@color/textDark"
			app:counterOverflowTextColor="@color/textDark"
			app:endIconMode="custom"
			app:endIconDrawable="@drawable/ic_arrow_down"
			app:endIconTint="@color/primaryDark">

			<com.google.android.material.textfield.MaterialAutoCompleteTextView
				android:id="@+id/motivation_select"

				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:hint="@string/select_motivation"
				android:textColorHint="@color/textDark60"
				android:inputType="textAutoComplete"
				android:textColor="@color/textDark"
				android:padding="@dimen/default_card_padding" />

		</com.google.android.material.textfield.TextInputLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/give_more_details"
			android:textSize="20sp" />

		<EditText
			android:id="@+id/symptom_details_input"

			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:background="@drawable/shape_input"
			android:backgroundTint="@color/surface"
			android:hint="@string/give_more_symptom_details_hint"
			android:inputType="text"
			android:autofillHints="name"
			android:textColor="@color/textDark"
			android:textColorHint="@color/textDark60"
			android:gravity="top"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/question_consultation_datetime"
			android:textSize="18sp"

			app:drawableStartCompat="@drawable/ic_asterisk"
			app:drawableTint="@color/error" />

		<!-- TODO: TRANSFORMAR EM ConstraintLayout -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"

			app:layout_constraintTop_toBottomOf="@id/period_text_start"
			app:layout_constraintStart_toStartOf="parent">

			<Button
				android:id="@+id/consultation_date_input"

				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/DATE_FORMAT"
				android:layout_weight="1"
				android:textAlignment="viewStart"
				android:textColor="@color/textDark60"

				app:cornerRadius="@dimen/big_button_corner_radius"
				app:backgroundTint="@color/surface"
				app:icon="@drawable/ic_calendar"
				app:iconGravity="end"
				app:iconTint="@color/textDark" />

			<Space
				android:layout_width="5dp"
				android:layout_height="0dp" />

			<Button
				android:id="@+id/consultation_time_input"

				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/time_not_selected"
				android:textAlignment="viewStart"
				android:textColor="@color/textDark60"

				app:cornerRadius="@dimen/big_button_corner_radius"
				app:backgroundTint="@color/surface"
				app:icon="@drawable/ic_clock"
				app:iconGravity="end"
				app:iconTint="@color/textDark" />

		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/question_what_hospital"
			android:textSize="18sp"

			app:drawableStartCompat="@drawable/ic_asterisk"
			app:drawableTint="@color/error" />

		<Button
			android:id="@+id/select_hospital"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/select_hospital"
			android:textAlignment="viewStart"
			android:textColor="@color/textDark60"
			android:padding="@dimen/default_card_padding"
			android:insetTop="0dp"
			android:insetBottom="0dp"

			app:icon="@drawable/ic_arrow_down"
			app:iconSize="30dp"
			app:iconGravity="end"
			app:iconTint="@color/primaryDark"
			app:backgroundTint="@color/surface"
			app:cornerRadius="@dimen/big_button_corner_radius" />

		<Button
			android:id="@+id/request_consultation_button"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/request_consultation"
			android:textColor="@color/primaryDark"
			android:insetBottom="0dp"

			app:backgroundTint="@color/accent"
			app:cornerRadius="@dimen/big_button_corner_radius" />

	</LinearLayout>

</ScrollView>