<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"

	android:layout_width="match_parent"
	android:layout_height="match_parent"

	tools:context=".EnviarCrm">

	<com.unnebulous.consultapronta.views.HeaderView
		android:id="@+id/header"

		android:layout_width="match_parent"
		android:layout_height="wrap_content"

		app:headerType="titled"
		app:isScreenTitled="false"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>

	<LinearLayout
		android:id="@+id/content_body"

		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:orientation="vertical"
		android:paddingStart="@dimen/default_screen_padding"
		android:paddingTop="@dimen/default_screen_padding"
		android:paddingEnd="@dimen/default_screen_padding"
		android:paddingBottom="@dimen/default_screen_padding"
		android:showDividers="middle"
		android:divider="@drawable/divider_default"

		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/header" >
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/create_account"
			android:textSize="28sp"
			android:textStyle="bold" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/send_crm_subtitle" />

		<com.unnebulous.consultapronta.views.FileInputView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"

			app:icon="@drawable/ic_add_circle"
			app:textMain="@string/send_crm_text_main"
			app:textFileType="@string/send_crm_text_file_type" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>