<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"

	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingTop="@dimen/default_padding_top">

	<LinearLayout
		android:id="@+id/header"

		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"

		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<Button
			style="?attr/materialIconButtonStyle"

			android:id="@+id/go_back"

			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:padding="10dp"

			app:icon="@drawable/ic_arrow_back"
			app:iconSize="34dp"
			app:iconTint="@color/textLight" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/go_back"
			android:textSize="26sp"
			android:textStyle="bold" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/content_body"

		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:orientation="vertical"
		android:paddingStart="@dimen/default_screen_padding"
		android:paddingEnd="@dimen/default_screen_padding"
		android:paddingBottom="@dimen/default_screen_padding"

		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/header">

		<com.unnebulous.consultapronta.views.UserTypeSelectorView
			android:id="@+id/user_type_switch"

			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="12dp" />

		<EditText
			android:id="@+id/email_input"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dp"
			android:autofillHints="emailAddress"
			android:background="@drawable/input_shape"
			android:drawableStart="@drawable/ic_email"
			android:drawablePadding="10dp"
			android:hint="@string/input_email"
			android:inputType="textEmailAddress"

			android:textColor="@color/textLight"
			android:textColorHint="@color/textLight60" />

		<EditText
			android:id="@+id/password_input"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="12dp"
			android:autofillHints="password"
			android:background="@drawable/input_shape"
			android:drawableStart="@drawable/ic_password"
			android:drawablePadding="10dp"
			android:hint="@string/input_password"
			android:inputType="textPassword"

			android:textColor="@color/textLight"
			android:textColorHint="@color/textLight60" />

		<Button
			style="@style/Widget.Material3.Button.TextButton"

			android:id="@+id/forgot_password_button"

			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:paddingLeft="5dp"
			android:paddingTop="0dp"
			android:paddingRight="5dp"
			android:paddingBottom="0dp"
			android:text="@string/forgot_password"
			android:textColor="@color/textLight" />

		<Space
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<Button
			android:id="@+id/enter_button"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:background="@drawable/big_button_shape"
			android:text="@string/enter"
			android:textColor="@color/primaryDark"

			app:backgroundTint="@color/accent" />

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="12dp"
			android:text="@string/enter_with_govbr"
			android:textColor="@color/govbr_blue"

			app:backgroundTint="@color/white"
			app:icon="@drawable/ic_govbr_negativo"
			app:iconGravity="textEnd"
			app:iconSize="0dp"
			app:iconTint="@color/govbr_blue" />

		<LinearLayout
			android:id="@+id/do_not_have_account_layout"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/do_not_have_account" />

			<Button
				style="@style/Widget.Material3.Button.TextButton"

				android:id="@+id/sign_up_button"

				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="5dp"
				android:paddingTop="0dp"
				android:paddingRight="5dp"
				android:paddingBottom="0dp"
				android:text="@string/sign_up"
				android:textColor="@color/accent" />

		</LinearLayout>


	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>